fixing layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,21 @@ body {
 .boxshadow {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
+
+.bg-banner {
+  background-image: url("/Bannerimge.png");
+  background-size: 75% 100%;
+  background-position: 100 100;
+  background-repeat: no-repeat;
+}
+
+@media (max-width: 768px) {
+  .bg-banner {
+    background-image: url("/Bannerimge.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 470px;
+  }
+}
